[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Sprites/Buttons/Button3.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Torch.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/BackgroundBricks.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/8-bit Arcade In.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Sprites/Slider.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Buttons/Button6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Buttons/Button16.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/SliderPick.png" type="Texture" id=10]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 400, 40 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HSlider:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HSlider:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HSlider:editable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HSlider:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HSlider:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HSlider:editable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HSlider:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HSlider:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HSlider:editable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HSlider:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HSlider:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HSlider:editable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1

[sub_resource type="DynamicFont" id=12]
size = 192
font_data = ExtResource( 5 )

[node name="Settings" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.03, 0.17, 0.29, 1 )

[node name="Ligths" type="Node2D" parent="."]

[node name="Torch" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 210, 150 )

[node name="Torch2" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 210, 624.703 )

[node name="Torch3" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 1117.57, 615.19 )

[node name="Torch4" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 1070, 150 )

[node name="Torch5" parent="Ligths" instance=ExtResource( 2 )]
position = Vector2( 640, 360 )

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Buttons"]
material = SubResource( 1 )
margin_left = 36.0
margin_top = 36.0
margin_right = 196.0
margin_bottom = 196.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="Buttons"]
pause_mode = 2
material = SubResource( 2 )
margin_left = 492.037
margin_top = 201.706
margin_right = 652.037
margin_bottom = 361.706
toggle_mode = true
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Buttons/SoundButton"]
visible = false
material = SubResource( 3 )
margin_left = 202.409
margin_top = 63.9081
margin_right = 602.409
margin_bottom = 103.908
rect_scale = Vector2( 1e-05, 1 )
custom_icons/grabber_disabled = ExtResource( 10 )
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
min_value = -24.0
max_value = 0.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/SoundButton"]
anims/Hide = SubResource( 7 )
anims/Show = SubResource( 8 )

[node name="SfxButton" type="TextureButton" parent="Buttons"]
pause_mode = 2
material = SubResource( 2 )
margin_left = 522.003
margin_top = 406.269
margin_right = 682.003
margin_bottom = 566.269
toggle_mode = true
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Buttons/SfxButton"]
visible = false
material = SubResource( 3 )
margin_left = 202.409
margin_top = 63.9081
margin_right = 602.409
margin_bottom = 103.908
rect_scale = Vector2( 1e-05, 1 )
custom_icons/grabber_disabled = ExtResource( 10 )
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 10 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
min_value = -24.0
max_value = 0.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buttons/SfxButton"]
anims/Hide = SubResource( 9 )
anims/Show = SubResource( 10 )

[node name="Labels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="Labels"]
material = SubResource( 11 )
margin_left = 300.0
margin_top = 0.727173
margin_right = 1020.0
margin_bottom = 128.727
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.729412, 0.964706, 0.952941, 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="Buttons/SoundButton" to="." method="_on_SoundButton_toggled"]
[connection signal="value_changed" from="Buttons/SoundButton/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="Buttons/SfxButton" to="." method="_on_SfxButton_toggled"]
[connection signal="value_changed" from="Buttons/SfxButton/HSlider" to="." method="_on_HSlider_value_changedsfx"]
